# SmartCode

./: .gitignore  README.md  SPEC.md  pyproject.toml
demo/: DEMO_COMMANDS.md  DEMO_RULES.md  README.md  feature.py  validation.py
demo/checkin/: service.py
demo/docs/: notes.md
demo/locked/: secrets.py
demo_task_api/: DEMO_FLOW.md  README.md
demo_task_api/docs/: task_api_spec.md
demo_task_api/tests/: test_api.py
docs/: OPERATOR_RUNBOOK.md  READING_ORDER.md
sc/: agent_client.py  autonomy.py  checkin_quality.py  cli.py  cli_shared.py  config.py  constraints.py  demo_seed_data.py  features.py  patch.py  phase.py  plan_gate.py  policy.py  prompt_builder.py  repo.py  schema.py  session.py  session_feedback.py  trust_db.py  verification.py
sc/commands/: admin.py  observe.py  shared.py
sc/run/: __init__.py  apply_stage.py  command.py  helpers.py  model.py  read_stage.py  reporting.py  traces.py  ui.py
tests/: test_autonomy.py  test_checkin_quality.py  test_config.py  test_constraints.py  test_features.py  test_phase.py  test_plan_gate.py  test_policy.py  test_prompt_builder.py  test_rule_compilation.py  test_run_history_context.py  test_run_reporting.py  test_run_ui.py  test_schema_checkin.py  test_session.py  test_session_feedback.py  test_trust_db_autonomy.py  test_trust_db_checkin_usefulness.py  test_trust_db_constraints.py  test_trust_db_feedback.py  test_trust_db_guidelines.py  test_trust_db_leases.py  test_trust_db_plan_verification.py  test_verification.py
tests/fixtures/: sample_agents.md
